# UZH

./: .gitignore  README.md
ACF1/: Black-Scholes.ipynb  Black_Sholes.py  pyproject.toml
DataScience/: ANN.ipynb  Practical1_matplotlib.ipynb  Practical1_numpy.ipynb  Practical1_python.ipynb  Practical1_session-11-10-21.ipynb  Practical1_session.ipynb  README.md  Test_notebook.ipynb  prepare_data.ipynb
Innosuisse-Start-up/Inspiced/: chef_transformer.py  docker-compose.yml  main.py  pyproject.toml
Innosuisse-Start-up/streamlit-inspiced/: chef_transformer.py  main.py  pyproject.toml
Programming-Languages-Paradigms/IFC-CLI/: Cargo.toml
Programming-Languages-Paradigms/IFC-CLI/src/: main.rs
Programming-Languages-Paradigms/Rust-Quicksort/src/: main.rs  rosettacode.rs
Programming-Languages-Paradigms/hello_world/src/: main.rs
Programming-Languages-Paradigms/multi_thread_quick_sort/: Cargo.toml
Programming-Languages-Paradigms/multi_thread_quick_sort/src/: main.rs
Programming-Languages-Paradigms/rust_external_command/: Cargo.toml
Programming-Languages-Paradigms/rust_external_command/src/: main.rs
Programming-Languages-Paradigms/rust_external_libraries/: Cargo.toml
Programming-Languages-Paradigms/rust_external_libraries/src/: main.rs
Programming-Languages-Paradigms/rust_state_machine/: Cargo.toml
Programming-Languages-Paradigms/rust_state_machine/data/: car.machine  vending.machine
Programming-Languages-Paradigms/rust_state_machine/src/: lib.rs  machine_parser.rs  main.rs
Programming-Languages-Paradigms/rust_state_machine_v2/: Cargo.toml
Programming-Languages-Paradigms/rust_state_machine_v2/data/: car.machine  doggo.machine  hotel.machine  invalid_missing_entry.machine  rolling.machine  vending.machine
Programming-Languages-Paradigms/rust_state_machine_v2/src/: lib.rs  machine_parser.rs  main.rs
Programming-Languages-Paradigms/rustapp-helloworld-debug/: Cargo.toml
TA/bank_testing/: README.md  pyproject.toml
TA/bank_testing/bank/: card.py  main.py  order.py  payment.py  processor.py
TA/bank_testing/tests/: test_line_item.py  test_order.py  test_payment.py  test_processor.py
investing_tools/: README.md  cnn_basecamp.py  mlp_basecamp.py  pyproject.toml  rnn_basecamp.py
investing_tools/project_project_kit/: Short_Interest.csv  VIX.csv  autoencode_and_trade.py  market_data.xlsx  predict_and_trade.py
quantitative_tools/three_layer_mlp/: three_layer_mlp.py
(+1 files in other folders)
