[tool.poetry]
name = "ACF1"
version = "0.1.0"
description = ""
authors = ["Matthew Aylward <matthewtyleraylward@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
