[project]
name = "investing_tools"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Butch78", email = "matthewtyleraylward@hotmail.com" }
]
dependencies = [
    "numpy~=1.24.3",
    "keras~=2.12.0",
    "matplotlib~=3.7.1",
    "tensorflow~=2.12.0",
    "pandas~=2.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
