[tool.poetry]
name = "inspiced"
version = "0.1.0"
description = "A Hugging Face Application"
authors = ["Butch78 <matthewtyleraylward@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.26.1"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
