[tool.poetry]
name = "streamlit-inspiced"
version = "0.1.0"
description = ""
authors = ["Butch78 <matthewtyleraylward@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "streamlit_inspiced"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
transformers = "^4.26.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
